# bfc-rs

./: BUGS.md  Cargo.toml  README.md  TESTS.md  TODO.md
src/: execute.rs  main.rs  parse.rs
src/args/: args.rs
src/execute/: compile.rs  interpret.rs  machine.rs
src/parse/: ast.rs  opcodes.rs  optimizer.rs
tests/: bla.bf  more.bf
