[package]
name = "bfc-rs"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "fat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
qbe = { git = "https://github.com/Elsie19/qbe-rs.git", branch = "main" }
reedline = "0.31.0"
