[package]
name = "bfc-rs"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "fat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
qbe = { git = "https://github.com/Elsie19/qbe-rs.git", branch = "main" }
reedline = "0.37.0"
wrapnum = "0.2.0"
